2002-02-11  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/paledit.*,etc: Import/export palettes (in text format).
	Save palette file in 'patch'.

2002-02-10  Jeff Freedman  <jeff@amy.nerble.net>

	* files/Flex.*,gamedat.cc,mapedit/shapegroup.cc:  Flex_writer
	class added.

	* mapedit/paledit.cc (Palette_edit): Show the different palettes
	within palettes.flx.
	* files/U7file.*:  Added 'number_of_objects()' to U7object class.

2002-02-10  Darke  <darkwpaw@users.sourceforge.net>
	* audio/xmidi.cc: Fixed const.
	* mapedit/studio.cc: Fixed namespaces.

2002-02-09  Ryan Nunn  <triforce@merlin.net.au>
	* usecode/intrinsics.cc, usecode/siintrinsics.h, usecode/ucinternal.h :
	  Fixed skin colour problem in sex scenes.

2002-02-09  Ryan Nunn  <triforce@merlin.net.au>
	* game.cc : Namespace stuff
	* gamemap.cc : Compiling error
	* msvcstuff/msvc_kludges.h : Headers dir
	* audio/xmidi.*, audio/midi_drivers/mac_midi.cc, 
	  audio/midi_drivers/win_midiout.cc : Fixing up a memory leak that
	  was occuring for all the builds except Win32 and Mac.

2002-02-09  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapefile.cc (Shape_file_set): Check 'patch', then
	'static'.
	* gamemap.cc: Create 'u7chunks' in 'patch' if it doesn't exist.

	* gamewin.cc: Create IDENTITY for newly-developed game.

2002-02-08  Tristan Tarrant  <nadir@users.sourceforge.net>
	* */Makefile.am: include headers dir

2002-02-08  Ryan Nunn  <triforce@merlin.net.au>
	* audio/*.*, audio/midi_drivers/*.*, exultmenu.cc : Changes to the midi
	  system. Now evern faster, and safer too. New super accurate integer
	  timing method for Windows. Improved XMIDI looping for Pentagram in
	  Windows. Probably other things as well that I just can't remember

	* sigame.cc : Fixed a crash in the SI Intro.

	* data/bg/defaultkeys.txt, data/si/defaultkeys.txt : Added Alt-F4 (quit)
	  and Alt-Enter (toggle fullscreen) shortcut keys.

	* headers/common_types.h : Some things from both exult_types.h and