@@ -1,3 +1,9 @@
+2002-02-13  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* gamewin.h,game.*:  Allow MAINSHP.FLX to not exist for newly
+	developed games.  A new game is created automatically with Avatar 
+	named "Newbie" and shape=721 (for now).
+
 2002-02-11  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* mapedit/paledit.*,etc: Import/export palettes (in text format).
